Bug fix, working kosti'l