@@ -44,7 +44,7 @@ public class CommandAdd extends Command {
         this.scanner = Core.getInstance().getCurrentScanner();
 
         if (!parsedString.getArguments().isEmpty()) {
-            if (" h".equals(parsedString.getArguments().get(0))) 
+            if (" h".equals(parsedString.getArguments().getFirst()))
                 return this.showUsage(parsedString);
         }
         
